gitops/stages/060-agent-runtime-and-agentops/060-openshell-runtime/chart/rendered/networkpolicy-openshell-developer-openshell-sandbox-ssh.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '-20'
  labels:
    app.kubernetes.io/component: agent-runtime
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: openshell
    app.kubernetes.io/part-of: rhoai3-coding-demo
  name: openshell-sandbox-ssh
  namespace: openshell-developer
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshell
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: openshell
          app.kubernetes.io/name: openshell
    ports:
    - port: 2222
      protocol: TCP
  podSelector:
    matchLabels:
      openshell.ai/managed-by: openshell
  policyTypes:
  - Ingress
